--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "check": "npm run build && npm run test:scenarios"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.31",
     "@ai-sdk/react": "^3.0.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
